load("@obazl_rules_ocaml//ocaml:rules.bzl", "ocaml_module", "ocaml_ns_library", "ocaml_signature")

ocaml_signature(
    name = "p2p_socket_sig",
    src = ":p2p_socket.mli",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    deps = [
        ":p2p_events",
        ":p2p_io_scheduler",
        ":p2p_params",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_module(
    name = "p2p_socket",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    sig = ":p2p_socket_sig",
    struct = ":p2p_socket.ml",
    deps = [
        ":p2p_events",
        ":p2p_io_scheduler",
        ":p2p_params",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_signature(
    name = "p2p_welcome_sig",
    src = ":p2p_welcome.mli",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    deps = [
        ":p2p_connect_handler",
        ":p2p_events",
        ":p2p_fd",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_module(
    name = "p2p_welcome",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    sig = ":p2p_welcome_sig",
    struct = ":p2p_welcome.ml",
    deps = [
        ":p2p_connect_handler",
        ":p2p_events",
        ":p2p_fd",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_signature(
    name = "p2p_sig",
    src = ":p2p.mli",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    deps = [
        ":p2p_conn",
        ":p2p_connect_handler",
        ":p2p_discovery",
        ":p2p_events",
        ":p2p_io_scheduler",
        ":p2p_maintenance",
        ":p2p_params",
        ":p2p_peer_state",
        ":p2p_point_state",
        ":p2p_pool",
        ":p2p_protocol",
        ":p2p_socket",
        ":p2p_trigger",
        ":p2p_welcome",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_module(
    name = "p2p",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    sig = ":p2p_sig",
    struct = ":p2p.ml",
    deps = [
        ":p2p_conn",
        ":p2p_connect_handler",
        ":p2p_discovery",
        ":p2p_events",
        ":p2p_io_scheduler",
        ":p2p_maintenance",
        ":p2p_params",
        ":p2p_peer_state",
        ":p2p_point_state",
        ":p2p_pool",
        ":p2p_protocol",
        ":p2p_socket",
        ":p2p_trigger",
        ":p2p_welcome",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_signature(
    name = "p2p_directory_sig",
    src = ":p2p_directory.mli",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    deps = [
        ":p2p",
        ":p2p_conn",
        ":p2p_connect_handler",
        ":p2p_peer_state",
        ":p2p_point_state",
        ":p2p_pool",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_module(
    name = "p2p_directory",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    sig = ":p2p_directory_sig",
    struct = ":p2p_directory.ml",
    deps = [
        ":p2p",
        ":p2p_conn",
        ":p2p_connect_handler",
        ":p2p_peer_state",
        ":p2p_point_state",
        ":p2p_pool",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_signature(
    name = "p2p_trigger_sig",
    src = ":p2p_trigger.mli",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    deps = [
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_module(
    name = "p2p_trigger",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    sig = ":p2p_trigger_sig",
    struct = ":p2p_trigger.ml",
    deps = [
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_signature(
    name = "p2p_conn_sig",
    src = ":p2p_conn.mli",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    deps = [
        ":p2p_answerer",
        ":p2p_events",
        ":p2p_message",
        ":p2p_peer_state",
        ":p2p_point_state",
        ":p2p_socket",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_module(
    name = "p2p_conn",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    sig = ":p2p_conn_sig",
    struct = ":p2p_conn.ml",
    deps = [
        ":p2p_answerer",
        ":p2p_events",
        ":p2p_message",
        ":p2p_peer_state",
        ":p2p_point_state",
        ":p2p_socket",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_module(
    name = "p2p_events",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    struct = ":p2p_events.ml",
    deps = [
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_signature(
    name = "p2p_message_sig",
    src = ":p2p_message.mli",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    deps = [
        ":p2p_params",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_module(
    name = "p2p_message",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    sig = ":p2p_message_sig",
    struct = ":p2p_message.ml",
    deps = [
        ":p2p_params",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_signature(
    name = "p2p_point_state_sig",
    src = ":p2p_point_state.mli",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    deps = [
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_module(
    name = "p2p_point_state",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    sig = ":p2p_point_state_sig",
    struct = ":p2p_point_state.ml",
    deps = [
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_signature(
    name = "p2p_connect_handler_sig",
    src = ":p2p_connect_handler.mli",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    deps = [
        ":p2p_answerer",
        ":p2p_conn",
        ":p2p_events",
        ":p2p_fd",
        ":p2p_io_scheduler",
        ":p2p_message",
        ":p2p_params",
        ":p2p_peer_state",
        ":p2p_point_state",
        ":p2p_pool",
        ":p2p_socket",
        ":p2p_trigger",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_module(
    name = "p2p_connect_handler",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    sig = ":p2p_connect_handler_sig",
    struct = ":p2p_connect_handler.ml",
    deps = [
        ":p2p_answerer",
        ":p2p_conn",
        ":p2p_events",
        ":p2p_fd",
        ":p2p_io_scheduler",
        ":p2p_message",
        ":p2p_params",
        ":p2p_peer_state",
        ":p2p_point_state",
        ":p2p_pool",
        ":p2p_socket",
        ":p2p_trigger",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_signature(
    name = "p2p_maintenance_sig",
    src = ":p2p_maintenance.mli",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    deps = [
        ":p2p_conn",
        ":p2p_connect_handler",
        ":p2p_discovery",
        ":p2p_events",
        ":p2p_peer_state",
        ":p2p_point_state",
        ":p2p_pool",
        ":p2p_trigger",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_module(
    name = "p2p_maintenance",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    sig = ":p2p_maintenance_sig",
    struct = ":p2p_maintenance.ml",
    deps = [
        ":p2p_conn",
        ":p2p_connect_handler",
        ":p2p_discovery",
        ":p2p_events",
        ":p2p_peer_state",
        ":p2p_point_state",
        ":p2p_pool",
        ":p2p_trigger",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_module(
    name = "p2p_params",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    struct = ":p2p_params.ml",
    deps = [
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_signature(
    name = "p2p_io_scheduler_sig",
    src = ":p2p_io_scheduler.mli",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    deps = [
        ":p2p_events",
        ":p2p_fd",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_module(
    name = "p2p_io_scheduler",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    sig = ":p2p_io_scheduler_sig",
    struct = ":p2p_io_scheduler.ml",
    deps = [
        ":p2p_events",
        ":p2p_fd",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_signature(
    name = "p2p_protocol_sig",
    src = ":p2p_protocol.mli",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    deps = [
        ":p2p_answerer",
        ":p2p_conn",
        ":p2p_events",
        ":p2p_point_state",
        ":p2p_pool",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_module(
    name = "p2p_protocol",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    sig = ":p2p_protocol_sig",
    struct = ":p2p_protocol.ml",
    deps = [
        ":p2p_answerer",
        ":p2p_conn",
        ":p2p_events",
        ":p2p_point_state",
        ":p2p_pool",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_module(
    name = "p2p_answerer",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    struct = ":p2p_answerer.ml",
    deps = [
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_signature(
    name = "p2p_peer_state_sig",
    src = ":p2p_peer_state.mli",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    deps = [
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_module(
    name = "p2p_peer_state",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    sig = ":p2p_peer_state_sig",
    struct = ":p2p_peer_state.ml",
    deps = [
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_signature(
    name = "p2p_pool_sig",
    src = ":p2p_pool.mli",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    deps = [
        ":p2p_acl",
        ":p2p_conn",
        ":p2p_events",
        ":p2p_params",
        ":p2p_peer_state",
        ":p2p_point_state",
        ":p2p_trigger",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_module(
    name = "p2p_pool",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    sig = ":p2p_pool_sig",
    struct = ":p2p_pool.ml",
    deps = [
        ":p2p_acl",
        ":p2p_conn",
        ":p2p_events",
        ":p2p_params",
        ":p2p_peer_state",
        ":p2p_point_state",
        ":p2p_trigger",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_signature(
    name = "p2p_fd_sig",
    src = ":p2p_fd.mli",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    deps = [
        ":p2p_events",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_module(
    name = "p2p_fd",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    sig = ":p2p_fd_sig",
    struct = ":p2p_fd.ml",
    deps = [
        ":p2p_events",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_signature(
    name = "p2p_acl_sig",
    src = ":p2p_acl.mli",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    deps = [
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_module(
    name = "p2p_acl",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    sig = ":p2p_acl_sig",
    struct = ":p2p_acl.ml",
    deps = [
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_signature(
    name = "p2p_discovery_sig",
    src = ":p2p_discovery.mli",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    deps = [
        ":p2p_events",
        ":p2p_pool",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

ocaml_module(
    name = "p2p_discovery",
    deps_opam = [
        "lwt-watcher",
        "lwt-canceler",
        "ringo",
    ],
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_p2p_services",
    ],
    sig = ":p2p_discovery_sig",
    struct = ":p2p_discovery.ml",
    deps = [
        ":p2p_events",
        ":p2p_pool",
        "@tezos//src/lib_base:#Tezos_base",
        "@tezos//src/lib_p2p_services:#Tezos_p2p_services",
        "@tezos//src/lib_stdlib:#Tezos_stdlib",
        "@tezos//src/lib_stdlib_unix:#Tezos_stdlib_unix",
    ],
)

# okapi:auto
# okapi:public_name tezos-p2p
ocaml_ns_library(
    name = "#Tezos_p2p",
    submodules = [
        ":p2p",
        ":p2p_acl",
        ":p2p_answerer",
        ":p2p_conn",
        ":p2p_connect_handler",
        ":p2p_directory",
        ":p2p_discovery",
        ":p2p_events",
        ":p2p_fd",
        ":p2p_io_scheduler",
        ":p2p_maintenance",
        ":p2p_message",
        ":p2p_params",
        ":p2p_peer_state",
        ":p2p_point_state",
        ":p2p_pool",
        ":p2p_protocol",
        ":p2p_socket",
        ":p2p_trigger",
        ":p2p_welcome",
    ],
    visibility = ["//visibility:public"],
)
